mysql-service-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h # tem que ser igual ao nome do serviceName do statefulset
spec:
  selector:
    app: mysql
  ports:
  - name: mysql-service
    port: 3306
    protocol: TCP
  clusterIP: None # tem que ser assim
