ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.ingressohub.com
    http:
      paths:
      - pathType: Prefix
        path: /app
        backend:
          service: 
            name: goserver-service
            port:
              number: 80
